--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,98 @@
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@use '@angular/material' as mat;
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat.core();
+
+// Define the theme object.
+$blog-theme: mat.define-theme((color: (theme-type: light,
+        primary: mat.$azure-palette,
+        tertiary: mat.$blue-palette,
+      ),
+      density: (scale: 0,
+      )));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+:root {
+  @include mat.all-component-themes($blog-theme);
+}
+
+// Comment out the line below if you want to use the pre-defined typography utility classes.
+// For more information: https://material.angular.io/guide/typography#using-typography-styles-in-your-application.
+// @include mat.typography-hierarchy($blog-theme);
+
+// Comment out the line below if you want to use the deprecated `color` inputs.
+// @include mat.color-variants-backwards-compatibility($blog-theme);
 /* You can add global styles to this file, and also import other style files */
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  line-height: 1.6;
+  color: #333;
+}
+
+markdown {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+markdown h1,
+markdown h2,
+markdown h3 {
+  border-bottom: 1px solid #eee;
+  padding-bottom: 0.625em;
+  /* 10px */
+  margin-bottom: 1.25em;
+  /* 20px */
+}
+
+markdown p {
+  margin: 1.25em 0;
+  /* 20px */
+}
+
+markdown a {
+  color: #3498db;
+  text-decoration: none;
+}
+
+markdown a:hover {
+  text-decoration: underline;
+}
+
+markdown blockquote {
+  border-left: 4px solid #eee;
+  padding-left: 1.25em;
+  color: #666;
+  margin: 1.25em 0;
+
+}
+
+.flex-row {
+  display: flex;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.align-center {
+  align-items: center;
+}
